# kimi-usage

./: .env.example  .gitignore  README.md  kimi_usage.code-workspace  kimi_usage.py  kimi_usage_mcp.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-05-09-pace-indicator.md  2026-05-14-pace-theme-thresholds.md
docs/superpowers/specs/: 2026-05-09-pace-indicator-design.md  2026-05-14-pace-theme-thresholds-design.md
src/kimi_code_usage/: main.py  mcp.py
vscode-extension/: .vscodeignore  README.md  package.json  package.nls.json  package.nls.zh-cn.json
vscode-extension/l10n/: bundle.l10n.json  bundle.l10n.zh-cn.json
vscode-extension/src/: extension.ts
