[project]
name = "kimi-code-usage"
version = "0.1.2"
description = "A curated Kimi Coding Plan usage monitor with aesthetic CLI and MCP server."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Haining Yu", email = "hainingyu@gmail.com" }
]
license = { text = "MIT" }
keywords = ["kimi", "moonshot", "mcp", "usage", "monitor", "curated"]
dependencies = [
    "aiohttp>=3.8.0",
    "rich>=12.0.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Golden0Voyager/kimi-code-usage"
Repository = "https://github.com/Golden0Voyager/kimi-code-usage"
Issues = "https://github.com/Golden0Voyager/kimi-code-usage/issues"

[project.scripts]
kimi-code-usage = "kimi_code_usage.main:run_cli"
kimi-usage = "kimi_code_usage.main:run_cli"
kimi-mcp = "kimi_code_usage.mcp:run_mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kimi_code_usage"]
